# amagrabi.github.io

./: README.md  app.py  index.html  pyproject.toml  requirements.txt
app/experience/: page.module.css  page.tsx
static/: robots.txt  sitemap.xml  styles.css
templates/: base.html  index.html
